-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
Windows
-
1f2f5b700b0e72785af46ae23775009cb55a1192
Plugin: vectorcan
The extended can frame is not read correctly since the QCanBusFrame constructor expects an ID with values smaller than 0x20000000U
Extended CAN messages have always an ID greater than 0x8000000.
Filename: vectorcanbackend.cpp
Function: void VectorCanBackendPrivate::startRead()
Proposed solution: reset the extended format identifier bit when constructing the can frame.
QCanBusFrame frame(msg.id & (~XL_CAN_EXT_MSG_ID), QByteArray(reinterpret_cast<const char *>(msg.data), int(msg.dlc)));