VectorCAN: Fix receiving frames with extended ID

Beside the CAN ID, the bit XL_CAN_EXT_MSG_ID
is stored in event.tagData.msg.id. This bit
indicates, that the received frame has
extended frame format.

However, this bit must be masked before calling
QCanBusFrame::setFrameId(), otherwise the frame
is marked as invalid with the ID set to zero.

Most likely this was broken by commit
a54fd820916caed2fb13b1a38e57deb5d918f74f

Task-number: QTBUG-58840
Change-Id: I1814f19fe3ba8a7d057c42e112b62228fabf4206
Reviewed-by: Denis Shienkov <denis.shienkov@gmail.com>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>